--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | NumberWizard</title>
-    <link rel="shortcut icon" href="GameBuild/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="GameBuild/TemplateData/style.css">
-    <script src="GameBuild/TemplateData/UnityProgress.js"></script>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
     <script src="GameBuild/UnityLoader.js"></script>
     <script>
       var unityInstance = UnityLoader.instantiate("unityContainer", "GameBuild/NumberWizardForWeb.json", {onProgress: UnityProgress});
